@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r2p10
+  {
+    Modules = LHCbDIRAC:v9r2p10, LHCbWebDIRAC:v4r4p10
+    Depends = DIRAC:v6r20p20
+    LcgVer = v14r2
+  }
+
   v9r2p9
   {
     Modules = LHCbDIRAC:v9r2p9, LHCbWebDIRAC:v4r4p9
