@@ -18,7 +18,7 @@ RUN chmod 755 /opt/dirac/dockerEntrypoint.sh
 ENTRYPOINT [ "/opt/dirac/dockerEntrypoint.sh" ]
 
 # Specify the version
-ENV LHCB_DIRAC_VERSION v9r2p9
+ENV LHCB_DIRAC_VERSION v9r2p10
 
 RUN curl -L -o dirac-install https://raw.githubusercontent.com/DIRACGrid/DIRAC/integration/Core/scripts/dirac-install.py && chmod +x dirac-install && ./dirac-install -r $LHCB_DIRAC_VERSION -l LHCb -e LHCb -t server -i 27 && rm -rf /opt/dirac/.installCache
 
